# salesforce-rust-crud

./: Cargo.toml  README.md
src/: app_inputs.rs  lib.rs  main.rs  utils.rs
src/models/: arg_model.rs  error_handler.rs  model.rs  state_model.rs
src/ui/: ui_render_handler.rs  ui_text.rs
