[package]
name = "sf-updates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-tls = "0.5.0"
clap = { version = "4.2.1", features = ["derive"] }
urlencoding = "2.1.2"
[[bin]]
bench = false
path = "src/main.rs"
name = "sfup"