[package]
name = "sf-updates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-tls = "0.5.0"
clap = { version = "4.2.1", features = ["derive"] }
urlencoding = "2.1.2"
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
preferences = "1.1.0"
crossterm = { version = "0.26.1", features = [ "serde" ] }
unicode-width = "0.1.5"
chrono = { version = "0.4.19", features = ["serde"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "sfup"